# BrokenTC2

./: .gitignore  .gitmodules  BrokenTC2.update  README.md  buildSetup.iss  deploy.bat  deploy.py  deployLog.txt  doxyfile.txt
BrokenTC2/: .gitignore  CMakeLists.txt  Constants.hpp  LoggerHandler.hpp  SoftSettings.cpp  SoftSettings.hpp  global.cpp  global.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
BrokenTC2/Debug/: logConsole.cpp  logConsole.hpp
BrokenTC2/Libs/: CMakeLists.txt
BrokenTC2/Libs/Proto/: CMakeLists.txt  GameProfileHelper.cpp  GameProfileHelper.hpp  ProtoHelp.cpp  ProtoHelp.hpp  TCprofile.proto  TCprofileDefaults.hpp
BrokenTC2/Libs/SimpleUpdater/: .gitignore  CMakeLists.txt  Constants.hpp  LoggerHandler.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ProgArgs.hpp  ProgFeatures.hpp  README.md  main.cpp
BrokenTC2/Libs/SimpleUpdater/libSimpleUpdater/: CMakeLists.txt  CompressionTools.cpp  CompressionTools.hpp  DownloadManager.cpp  DownloadManager.hpp  GeneralLibFunctions.hpp  Global.cpp  Global.hpp  JSONTools.cpp  JSONTools.hpp  LoggerHandler.hpp  ManifestTools.cpp  ManifestTools.hpp  Network.cpp  Network.hpp  Signing.hpp  SimpleUpdater.hpp  UpdateHandler.cpp  UpdateHandler.hpp  UpdtGlobal.cpp  UpdtGlobal.hpp  UpdtJSONTools.cpp  UpdtJSONTools.hpp  keysToolsMain.cpp  libSimpleUpdaterAssets.qrc
BrokenTC2/Libs/SimpleUpdater/libSimpleUpdater/cryptopp/: CMakeLists.txt
BrokenTC2/Libs/TextToSpeech/: CMakeLists.txt  TextToSpeech.cpp  TextToSpeech.hpp
BrokenTC2/QSDL/: GameController.cpp  GameController.hpp  SDLEventHandler.cpp  SDLEventHandler.hpp  SDLGlobal.cpp  SDLGlobal.hpp
BrokenTC2/TC/: ConfigEditor.cpp  ConfigEditor.hpp  Dialog_ConfigureGame.cpp  Dialog_ConfigureGame.hpp  Dialog_ConfigureGame.ui  GearHandler.cpp  GearHandler.hpp  Profile.cpp  Profile.hpp  Widget_gearDisplay.cpp  Widget_gearDisplay.hpp  Widget_gearDisplay.ui  gameProfile.hpp
BrokenTC2/Update/: PostUpdate.cpp  PostUpdate.hpp  Update.cpp  Update.hpp  UpdateHandler.cpp  UpdateHandler.hpp  UpdateHandler.ui  UpdateManager.cpp  UpdateManager.hpp  UpdateManager.ui
BrokenTC2/Utils/: Dialog_About.cpp  Dialog_About.hpp  Dialog_About.ui  Dialog_deviceSelection.cpp  Dialog_deviceSelection.hpp  Dialog_deviceSelection.ui  Dialog_getGameControllerButton.cpp  Dialog_getGameControllerButton.hpp  Dialog_getGameControllerButton.ui  Dialog_getKeyCode.cpp  Dialog_getKeyCode.hpp  Dialog_getKeyCode.ui  GUITools.cpp  GUITools.hpp  JSONTools.cpp  JSONTools.hpp  XmlTools.cpp  XmlTools.hpp  monotonic_clock.hpp
BrokenTC2/Windaube/: WinEventHandler.cpp  WinEventHandler.hpp  winextras.cpp
BrokenTC2/Windows/: WinEventHandler.cpp  WinEventHandler.hpp  WinUtils.cpp  WinUtils.hpp  winextras.cpp  winextras.hpp
BrokenTC2/assets/: iconResource.rc  resources.qrc
BrokenTC2/assets/img/: icons8-the-crew-2-480.pfi
BrokenTC2/assets/update/: changelog.md  update.bat  update.py
BrokenTC2/assets/updateScripts/: linux.sh  update.bat  update.py  updateStarter
BrokenTC2/cmake/modules/: FindSDL2.cmake  NSIS.definitions.nsh.in  Utils.cmake
Deployment/: DiscordChangelogTemplate.txt  GithubReleaseTemplate.txt  buildSetup.iss  deploy.bat  deploy.py  manifest.json
Docs/: README_fr.md  README_fr.md.old  README_old_fr.md  UserManual.md  UserManual_en.md  UserManual_fr.md  doxyfile.txt
RepoStats/: analyse_stats.py  repo_stats.json  repo_stats.py
